稍作修改，1.0.0版本上传

--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -168,6 +168,9 @@
     "?"
   ],
   "commands.shape-shifter-curse.form_not_found": ["未找到指定的形态！"],
+  "power.origins.form_allay_sp_amethyst_shard_only.name": ["水晶食性"],
+  "power.origins.form_ocelot_2_raw_meat_only.name": ["生肉食性"],
+  "power.origins.vegetarian.name": ["素食者"],
   "codex.header.status": ["状态"],
   "codex.header.appearance": ["外观"],
   "codex.header.pros": ["能力"],
@@ -218,7 +221,7 @@
     }],
   "codex.form.axolotl1.title": ["\n生长后的腮与有力的尾部让你能够自由探索被淹没的结构。刚捕获的鱼类是最适合你的食物"],
   "codex.form.axolotl1.appearance": ["你脸颊两侧的腮丛进一步生长。在水中，它们几乎可以供给你所需的所有氧气\n你身上的鳍膜进一步生长，覆盖了你身体的更多部分。它们的颜色似乎变得更加鲜艳了\n你的尾部进一步延长，变得更加强壮\n你的颈部生长出了吸水性很强的白色绒毛"],
-  "codex.form.axolotl1.pros": ["借助进一步发育的腮丛，你可以在水下呼吸，无需换气\n你在水中可以移动的稍快一些\n你的身体能更有效地消化生的鱼类，它们给与的饱食度更高\n借助有力的尾部，你可以从水面向空中跃起，到达高处"],
+  "codex.form.axolotl1.pros": ["借助进一步发育的腮丛，你可以在水下呼吸，无需换气\n你在水中可以移动的稍快一些\n你的身体能更有效地消化生的鱼类，它们给与的饱食度更高\n你拥有很强的再生能力，只要饱食度高于3格，你的生命值就可以随着时间缓慢恢复\n借助有力的尾部，你可以从水面向空中跃起，到达高处"],
   "codex.form.axolotl1.cons": ["你无法再装备头盔：你的腮丛无法忍受异物的碰触\n你的皮肤更容易沾染沙土，稍微拖慢你在沙地上的移动速度\n你目前的消化系统不再能消化非肉类的食物"],
   "codex.form.axolotl1.instincts": ["你想要尽可能",
     {
@@ -232,7 +235,7 @@
     },"的想法开始吸引你"],
   "codex.form.axolotl2.title": ["\n作为两栖类的一员，你是水中的掠食者，同时也能在陆地上活动——只是务必记得保持湿润"],
   "codex.form.axolotl2.appearance": ["你的尾部现在更接近你躯干的延伸，它几乎占据了身高的一半\n发达的腮丛占据了你头部的一大部分空间。它们几乎替代了肺部的作用，只要它们还处于湿润状态，你无需呼吸就能获得充沛的氧气\n半透明的鳍膜蔓延到了你身体的大部分区域。在水下，它们会随着波浪有节律地摆动\n白色的绒毛几乎覆盖了你的前胸与背部。它们能如同海绵一般储存水分，让你在陆地上也能长时间保持湿润"],
-  "codex.form.axolotl2.pros": ["由于对腮部呼吸的依赖，你必须时刻保持湿润——\n你的氧气值现在指示你的湿润度。它现在会在水中得到补充，并在陆地上缓慢消耗\n摄入水瓶或任何药水也可以补充湿润度\n\n你的身体从水中获得力量。在湿润度不为零时，你的最大生命值大幅提升\n\n生鱼给与更高的饱食度\n发达的鳍膜与强壮的尾部让你可以在水中移动的更快。它们能让你自由地跳出水面，也可以帮助你在水中悬浮，不再下沉\n四肢末端的钝爪增强你在水中的抓握力，让你可以在水下毫无阻碍地快速破坏方块\n身体结构的变化让你可以快速地爬行通过狭小的地方"],
+  "codex.form.axolotl2.pros": ["由于对腮部呼吸的依赖，你必须时刻保持湿润——\n你的氧气值现在指示你的湿润度。它现在会在水中得到补充，并在陆地上缓慢消耗\n摄入水瓶或任何药水也可以补充湿润度\n\n你的身体从水中获得力量。在湿润度不为零时，你的最大生命值大幅提升\n你拥有很强的再生能力，只要饱食度高于3格，你的生命值就可以随着时间缓慢恢复\n\n生鱼给与更高的饱食度\n发达的鳍膜与强壮的尾部让你可以在水中移动的更快。它们能让你自由地跳出水面，也可以帮助你在水中悬浮，不再下沉\n四肢末端的钝爪增强你在水中的抓握力，让你可以在水下毫无阻碍地快速破坏方块\n身体结构的变化让你可以快速地爬行通过狭小的地方"],
   "codex.form.axolotl2.cons": ["水分现在是你的生命线。当丧失湿润度时，你的最大生命值与移动速度均会大幅降低，让你几乎寸步难行\n\n你无法再装备头盔\n你在沙地上的移动速度更慢\n你只能食用肉类"],
   "codex.form.axolotl2.instincts": [" "],
 
@@ -296,7 +299,7 @@
   "codex.form.allay_sp.title": ["\n你现在的样子相当接近于某种友善的灵体生物，但不清楚是否由于你体内存在的魔法，你的身上出现了一些不太一样的特征"],
   "codex.form.allay_sp.appearance": ["你的身体现在由某种亮蓝色的半透明薄纱状物质构成。它们非常轻盈，让你能够漂浮在空中\n一对羽状的，类似触角的结构从你的前额长出，质地相当柔韧。它们似乎给了你某种全新的感官，让你可以感觉到周围生物所在的方位\n一双枝状的翅膀从你背后生长出来。借助它们。你可以在高空中漂浮移动。在翅膀的下方，两条飘带状的结构从你的背后延伸出来——你不太确定它们的作用，也许它们可以替代你失去的腿部的某些功能"],
   "codex.form.allay_sp.pros": ["更加接近于灵体的体质给与了你一些全新的能力——\n你的各种动作现在几乎不会消耗饱食度\n通过长按跳跃键，你可以飞上高空，以及在空中自由悬浮移动。在下落时你也会缓慢飘落\n\n由于漂浮在空中，你自然不会发出脚步声\n紫水晶与你的身体产生了奇特的共鸣：在物品栏中，你可以对着一个紫水晶块“使用”另一个紫水晶块来创造紫水晶碎片\n你可以感应到其他生物的能量并加以利用：你可以感知到一定范围内实体的方位。当对其他生物造成伤害时，你也可以从其身上吸取一定的生命值\n由于增强的感知能力，你可以使用弓箭带来更高的伤害\n你现在非常小，可以轻易进入一格高的空间，投射物也更难命中你"],
-  "codex.form.allay_sp.cons": ["介于灵体与实体之间的体质也为你带来了一些劣势——\n在使用悬浮能力时，你的饱食度会快速消耗\n你的身体无法从食物中获取能量，只有紫水晶碎片可以恢复你的饱食度。你也很难通过饱食度回复失去的生命值\n你的身体更加弱小，使用双手才能挥动工具与武器。你挖掘坚硬材质的速度更慢，造成的近战伤害也大量减少\n由于漂浮在空中，你移动的惯性更大，让你更难停下\n你躯干的下半部分消失了，你不再能装备腿甲与鞋"],
+  "codex.form.allay_sp.cons": ["介于灵体与实体之间的体质也为你带来了一些劣势——\n在使用悬浮能力时，你的饱食度会快速消耗\n你的身体无法从食物中获取能量，只有紫水晶碎片可以恢复你的饱食度。你也很难通过饱食度回复失去的生命值\n你的身体更加弱小，使用双手才能挥动工具与武器。你的生命值上限变得更低，挖掘坚硬材质的速度更慢，造成的近战伤害也大量减少\n由于漂浮在空中，你移动的惯性更大，让你更难停下\n你躯干的下半部分消失了，你不再能装备腿甲与鞋"],
   "codex.form.allay_sp.instincts": ["\n\n\n与其它形态相比，你觉察到你当前的形态似乎有些“特别之处”：它并没有对你的内心造成太多影响，似乎也没有那么稳定。如果你希望的话，应该可以较为容易地将其逆转"],
 
   "codex.form.alpha0.title": [" "],
