--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -59,6 +59,8 @@
   "effect.shape-shifter-curse.to_psi_sp_potion": ["empty custom psi special form"],
   "item.minecraft.potion.effect.to_chi_sp_potion": ["CHI"],
   "effect.shape-shifter-curse.to_chi_sp_potion": ["empty custom chi special form"],
+  "item.minecraft.potion.effect.to_phi_sp_potion": ["PHI"],
+  "effect.shape-shifter-curse.to_phi_sp_potion": ["empty custom phi special form"],
 
   "item.shape-shifter-curse.cursed_book_of_shape_shifter": ["奇怪的书"],
   "item.shape-shifter-curse.book_of_shape_shifter": ["幻形者之书"],
@@ -165,6 +167,7 @@
   "effect.shape-shifter-curse.to_omega_sp_effect": ["OMEGA"],
   "effect.shape-shifter-curse.to_psi_sp_effect": ["PSI"],
   "effect.shape-shifter-curse.to_chi_sp_effect": ["CHI"],
+  "effect.shape-shifter-curse.to_phi_sp_effect": ["PHI"],
 
   "effect.shape-shifter-curse.to_bat_0_effect.description": [
     "你突然感到很",
@@ -377,5 +380,10 @@
   "codex.form.chi_sp.appearance": [" "],
   "codex.form.chi_sp.pros": [" "],
   "codex.form.chi_sp.cons": [" "],
-  "codex.form.chi_sp.instincts": ["\n\n\n与其它形态相比，你觉察到你当前的形态似乎有些“特别之处”：它并没有对你的内心造成太多影响，似乎也没有那么稳定。如果你希望的话，应该可以较为容易地将其逆转"]
+  "codex.form.chi_sp.instincts": ["\n\n\n与其它形态相比，你觉察到你当前的形态似乎有些“特别之处”：它并没有对你的内心造成太多影响，似乎也没有那么稳定。如果你希望的话，应该可以较为容易地将其逆转"],
+  "codex.form.phi_sp.title": [" "],
+  "codex.form.phi_sp.appearance": [" "],
+  "codex.form.phi_sp.pros": [" "],
+  "codex.form.phi_sp.cons": [" "],
+  "codex.form.phi_sp.instincts": ["\n\n\n与其它形态相比，你觉察到你当前的形态似乎有些“特别之处”：它并没有对你的内心造成太多影响，似乎也没有那么稳定。如果你希望的话，应该可以较为容易地将其逆转"]
 }
