familiar_fox_2能力优化，加入女巫吸引与药水等逻辑

--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -167,6 +167,13 @@
     },
     " charm...?"
   ],
+  "effect.shape-shifter-curse.to_familiar_fox_0_effect": [
+    "Witch's",
+    {
+      "text": "potion", "color": "#0096FF"
+    },
+    "...?"
+  ],
   "effect.shape-shifter-curse.to_feral_cat_sp_effect": [
     {
       "text": "feral cat", "color": "#0096FF"
