加入永久变化与强效抑制剂逻辑 将familiar_fox_2调整为familiar_fox_3 加入女巫概率掉落familiar_fox溅射药水的逻辑 完善喷溅药水与滞留药水的本地化

--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -37,30 +37,61 @@
   "advancements.shape-shifter-curse.on_trigger_cursed_moon_form_2.description": ["You've regained your previous form... at least until the lunar magic fades. Perhaps you should seize this opportunity"],
 
   "item.minecraft.potion.effect.moondust_potion": ["Potion of Moondust"],
+    "item.minecraft.splash_potion.effect.moondust_potion": ["Splash Potion of Moondust"],
+    "item.minecraft.lingering_potion.effect.moondust_potion": ["Lingering Potion of Moondust"],
   "effect.shape-shifter-curse.moondust_potion": ["The essence of moondust surges within, it requires further processing"],
   "item.minecraft.potion.effect.to_bat_0_potion": ["Bat Curse Potion"],
+    "item.minecraft.splash_potion.effect.to_bat_0_potion": ["Splash Bat Curse Potion"],
+    "item.minecraft.lingering_potion.effect.to_bat_0_potion": ["Lingering Bat Curse Potion"],
   "effect.shape-shifter-curse.to_bat_0_potion": ["Squeak!"],
-  "item.minecraft.potion.effect.to_allay_sp_potion": ["Allay Sigil Potion"],
+  "item.minecraft.potion.effect.to_allay_sp_potion": ["Allay Curse Potion"],
+    "item.minecraft.splash_potion.effect.to_allay_sp_potion": ["Splash Allay Curse Potion"],
+    "item.minecraft.lingering_potion.effect.to_allay_sp_potion": ["Lingering Allay Curse Potion"],
   "effect.shape-shifter-curse.to_allay_sp_potion": ["Amethyst shards! They'll be important"],
   "item.minecraft.potion.effect.to_axolotl_0_potion": ["Axolotl Curse Potion"],
+    "item.minecraft.splash_potion.effect.to_axolotl_0_potion": ["Splash Axolotl Curse Potion"],
+    "item.minecraft.lingering_potion.effect.to_axolotl_0_potion": ["Lingering Axolotl Curse Potion"],
   "effect.shape-shifter-curse.to_axolotl_0_potion": ["Better stay moist"],
   "item.minecraft.potion.effect.to_ocelot_0_potion": ["Ocelot Curse Potion"],
+    "item.minecraft.splash_potion.effect.to_ocelot_0_potion": ["Splash Ocelot Curse Potion"],
+    "item.minecraft.lingering_potion.effect.to_ocelot_0_potion": ["Lingering Ocelot Curse Potion"],
   "effect.shape-shifter-curse.to_ocelot_0_potion": ["You'll want to stock up on raw meat"],
   "item.minecraft.potion.effect.to_feral_cat_sp_potion": ["Feral Cat Curse Potion"],
+    "item.minecraft.splash_potion.effect.to_feral_cat_sp_potion": ["Splash Feral Cat Curse Potion"],
+    "item.minecraft.lingering_potion.effect.to_feral_cat_sp_potion": ["Lingering Feral Cat Curse Potion"],
   "effect.shape-shifter-curse.to_feral_cat_sp_potion": ["Meow？"],
+  "item.minecraft.potion.effect.to_familiar_fox_0_potion": ["Familiar Fox Curse Potion"],
+  "item.minecraft.splash_potion.effect.to_familiar_fox_0_potion": ["Splash Familiar Fox Curse Potion"],
+  "item.minecraft.lingering_potion.effect.to_familiar_fox_0_potion": ["Lingering Familiar Fox Curse Potion"],
+  "effect.shape-shifter-curse.to_familiar_fox_0_potion": ["What do these witches want to do to you..？"],
+
   "item.minecraft.potion.effect.to_alpha_0_potion": ["ALPHA"],
+  "item.minecraft.splash_potion.effect.to_alpha_0_potion": ["ALPHA"],
+  "item.minecraft.lingering_potion.effect.to_alpha_0_potion": ["ALPHA"],
   "effect.shape-shifter-curse.to_alpha_0_potion": ["empty custom alpha form"],
   "item.minecraft.potion.effect.to_beta_0_potion": ["BETA"],
+  "item.minecraft.splash_potion.effect.to_beta_0_potion": ["BETA"],
+  "item.minecraft.lingering_potion.effect.to_beta_0_potion": ["BETA"],
   "effect.shape-shifter-curse.to_beta_0_potion": ["empty custom beta form"],
   "item.minecraft.potion.effect.to_gamma_0_potion": ["GAMMA"],
+  "item.minecraft.splash_potion.effect.to_gamma_0_potion": ["GAMMA"],
+  "item.minecraft.lingering_potion.effect.to_gamma_0_potion": ["GAMMA"],
   "effect.shape-shifter-curse.to_gamma_0_potion": ["empty custom gamma form"],
   "item.minecraft.potion.effect.to_omega_sp_potion": ["OMEGA"],
+  "item.minecraft.splash_potion.effect.to_omega_sp_potion": ["OMEGA"],
+  "item.minecraft.lingering_potion.effect.to_omega_sp_potion": ["OMEGA"],
   "effect.shape-shifter-curse.to_omega_sp_potion": ["empty custom omega special form"],
   "item.minecraft.potion.effect.to_psi_sp_potion": ["PSI"],
+  "item.minecraft.splash_potion.effect.to_psi_sp_potion": ["PSI"],
+  "item.minecraft.lingering_potion.effect.to_psi_sp_potion": ["PSI"],
   "effect.shape-shifter-curse.to_psi_sp_potion": ["empty custom psi special form"],
   "item.minecraft.potion.effect.to_chi_sp_potion": ["CHI"],
+  "item.minecraft.splash_potion.effect.to_chi_sp_potion": ["CHI"],
+  "item.minecraft.lingering_potion.effect.to_chi_sp_potion": ["CHI"],
   "effect.shape-shifter-curse.to_chi_sp_potion": ["empty custom chi special form"],
   "item.minecraft.potion.effect.to_phi_sp_potion": ["PHI"],
+  "item.minecraft.splash_potion.effect.to_phi_sp_potion": ["PHI"],
+  "item.minecraft.lingering_potion.effect.to_phi_sp_potion": ["PHI"],
   "effect.shape-shifter-curse.to_phi_sp_potion": ["empty custom phi special form"],
 
   "item.shape-shifter-curse.cursed_book_of_shape_shifter": ["Strange Book"],
@@ -72,6 +103,8 @@
   "item.shape-shifter-curse.moondust_matrix.tooltip": ["Moondust suspended in honey"],
   "item.shape-shifter-curse.catalyst": ["Catalyst"],
   "item.shape-shifter-curse.catalyst.tooltip": ["The magic within you seems to react when you touch this"],
+  "item.shape-shifter-curse.powerful_catalyst": ["Strong Catalyst"],
+  "item.shape-shifter-curse.powerful_catalyst.tooltip": ["It might take your transformation to next level..permanently. Are you REALLY going to do this?"],
   "item.shape-shifter-curse.inhibitor": ["Inhibitor"],
   "item.shape-shifter-curse.inhibitor.tooltip": ["The magic within you seems to calm when you touch this"],
   "item.shape-shifter-curse.powerful_inhibitor": ["Powerful Inhibitor"],
@@ -126,7 +159,9 @@
   "info.shape-shifter-curse.origin_form_used_catalyst": ["The catalyst agitates your magic, which eventually settles. It seems they need clearer direction..."],
   "info.shape-shifter-curse.origin_form_used_catalyst_attached": ["The catalyst activated the curse's magic, altering your body..."],
   "info.shape-shifter-curse.use_catalyst": ["The catalyst further excites the magic within..."],
-  "info.shape-shifter-curse.max_form_used_catalyst": ["Your current form is so thoroughly altered that even catalysts have minimal effect..\n(Don't worry, maybe I'll add that feature you're thinking of later!)"],
+  "info.shape-shifter-curse.max_form_used_catalyst": ["Your current form is so thoroughly altered that normal catalysts won't have any effect.."],
+  "info.shape-shifter-curse.max_form_used_powerful_catalyst": ["Under the effect of the powerful catalyst, permanent changes have taken root in your body..."],
+  "info.shape-shifter-curse.form_used_powerful_catalyst_failed": [" The powerful catalyst has no effect on your current form"],
   "info.shape-shifter-curse.sp_form_used_catalyst": ["Your current form contains special magic that catalysts can't influence..."],
 
   "entity.shape-shifter-curse.t_bat": ["Cursed Bat"],
