--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -36,30 +36,60 @@
   "advancements.shape-shifter-curse.on_trigger_cursed_moon_form_2.title": ["两面性"],
   "advancements.shape-shifter-curse.on_trigger_cursed_moon_form_2.description": ["你恢复了之前的形态..至少在月之魔力消退之前。也许你应该抓住这次机会"],
   "item.minecraft.potion.effect.moondust_potion": ["月尘药水"],
+    "item.minecraft.splash_potion.effect.moondust_potion": ["喷溅型月尘药水"],
+    "item.minecraft.lingering_potion.effect.moondust_potion": ["滞留型月尘药水"],
   "effect.shape-shifter-curse.moondust_potion": ["月之尘的精华在其中翻涌，它需要进一步加工"],
   "item.minecraft.potion.effect.to_bat_0_potion": ["蝙蝠咒文药水"],
+  "item.minecraft.splash_potion.effect.to_bat_0_potion": ["喷溅型蝙蝠咒文药水"],
+  "item.minecraft.lingering_potion.effect.to_bat_0_potion": ["滞留型蝙蝠咒文药水"],
   "effect.shape-shifter-curse.to_bat_0_potion": ["吱吱！"],
   "item.minecraft.potion.effect.to_allay_sp_potion": ["悦灵咒文药水"],
+    "item.minecraft.splash_potion.effect.to_allay_sp_potion": ["喷溅型悦灵咒文药水"],
+    "item.minecraft.lingering_potion.effect.to_allay_sp_potion": ["滞留型悦灵咒文药水"],
   "effect.shape-shifter-curse.to_allay_sp_potion": ["紫晶碎片！它会很重要的"],
   "item.minecraft.potion.effect.to_axolotl_0_potion": ["美西螈咒文药水"],
+    "item.minecraft.splash_potion.effect.to_axolotl_0_potion": ["喷溅型美西螈咒文药水"],
+    "item.minecraft.lingering_potion.effect.to_axolotl_0_potion": ["滞留型美西螈咒文药水"],
   "effect.shape-shifter-curse.to_axolotl_0_potion": ["最好保持湿润"],
   "item.minecraft.potion.effect.to_ocelot_0_potion": ["豹猫咒文药水"],
+    "item.minecraft.splash_potion.effect.to_ocelot_0_potion": ["喷溅型豹猫咒文药水"],
+    "item.minecraft.lingering_potion.effect.to_ocelot_0_potion": ["滞留型豹猫咒文药水"],
   "effect.shape-shifter-curse.to_ocelot_0_potion": ["你会想要储备一点生肉的"],
   "item.minecraft.potion.effect.to_feral_cat_sp_potion": ["野性猫之咒文药水"],
+    "item.minecraft.splash_potion.effect.to_feral_cat_sp_potion": ["喷溅型野性猫之咒文药水"],
+    "item.minecraft.lingering_potion.effect.to_feral_cat_sp_potion": ["滞留型野性猫之咒文药水"],
   "effect.shape-shifter-curse.to_feral_cat_sp_potion": ["喵？"],
+  "item.minecraft.potion.effect.to_familiar_fox_0_potion": ["狐之使魔咒文药水"],
+  "item.minecraft.splash_potion.effect.to_familiar_fox_0_potion": ["喷溅型狐之使魔咒文药水"],
+  "item.minecraft.lingering_potion.effect.to_familiar_fox_0_potion": ["滞留型狐之使魔咒文药水"],
+  "effect.shape-shifter-curse.to_familiar_fox_0_potion": ["那些女巫们究竟想要对你做什么..？"],
   "item.minecraft.potion.effect.to_alpha_0_potion": ["ALPHA"],
+    "item.minecraft.splash_potion.effect.to_alpha_0_potion": ["ALPHA"],
+    "item.minecraft.lingering_potion.effect.to_alpha_0_potion": ["ALPHA"],
   "effect.shape-shifter-curse.to_alpha_0_potion": ["empty custom alpha form"],
   "item.minecraft.potion.effect.to_beta_0_potion": ["BETA"],
+    "item.minecraft.splash_potion.effect.to_beta_0_potion": ["BETA"],
+    "item.minecraft.lingering_potion.effect.to_beta_0_potion": ["BETA"],
   "effect.shape-shifter-curse.to_beta_0_potion": ["empty custom beta form"],
   "item.minecraft.potion.effect.to_gamma_0_potion": ["GAMMA"],
+    "item.minecraft.splash_potion.effect.to_gamma_0_potion": ["GAMMA"],
+    "item.minecraft.lingering_potion.effect.to_gamma_0_potion": ["GAMMA"],
   "effect.shape-shifter-curse.to_gamma_0_potion": ["empty custom gamma form"],
   "item.minecraft.potion.effect.to_omega_sp_potion": ["OMEGA"],
+    "item.minecraft.splash_potion.effect.to_omega_sp_potion": ["OMEGA"],
+    "item.minecraft.lingering_potion.effect.to_omega_sp_potion": ["OMEGA"],
   "effect.shape-shifter-curse.to_omega_sp_potion": ["empty custom omega special form"],
   "item.minecraft.potion.effect.to_psi_sp_potion": ["PSI"],
+    "item.minecraft.splash_potion.effect.to_psi_sp_potion": ["PSI"],
+    "item.minecraft.lingering_potion.effect.to_psi_sp_potion": ["PSI"],
   "effect.shape-shifter-curse.to_psi_sp_potion": ["empty custom psi special form"],
   "item.minecraft.potion.effect.to_chi_sp_potion": ["CHI"],
+    "item.minecraft.splash_potion.effect.to_chi_sp_potion": ["CHI"],
+    "item.minecraft.lingering_potion.effect.to_chi_sp_potion": ["CHI"],
   "effect.shape-shifter-curse.to_chi_sp_potion": ["empty custom chi special form"],
   "item.minecraft.potion.effect.to_phi_sp_potion": ["PHI"],
+    "item.minecraft.splash_potion.effect.to_phi_sp_potion": ["PHI"],
+    "item.minecraft.lingering_potion.effect.to_phi_sp_potion": ["PHI"],
   "effect.shape-shifter-curse.to_phi_sp_potion": ["empty custom phi special form"],
 
   "item.shape-shifter-curse.cursed_book_of_shape_shifter": ["奇怪的书"],
@@ -71,6 +101,8 @@
   "item.shape-shifter-curse.moondust_matrix.tooltip": ["悬浮在蜂蜜中的月尘"],
   "item.shape-shifter-curse.catalyst": ["催化剂"],
   "item.shape-shifter-curse.catalyst.tooltip": ["当你接触它时，你体内的魔法似乎有所反应"],
+  "item.shape-shifter-curse.powerful_catalyst": ["强效催化剂"],
+  "item.shape-shifter-curse.powerful_catalyst.tooltip": ["它也许可以让你的变化更进一步..永久性的。你真的要这么做么？"],
   "item.shape-shifter-curse.inhibitor": ["抑制剂"],
   "item.shape-shifter-curse.inhibitor.tooltip": ["当你接触它时，你体内的魔法似乎平静了一些"],
   "item.shape-shifter-curse.powerful_inhibitor": ["强效抑制剂"],
@@ -120,7 +152,9 @@
   "info.shape-shifter-curse.origin_form_used_catalyst": ["受到催化剂的影响，你体内的魔法有些动荡不安，不过最后依然恢复了平静。似乎它们缺少一个更加明确的倾向...？"],
   "info.shape-shifter-curse.origin_form_used_catalyst_attached": ["你所受到的咒文效果被催化剂所活化，让你的身体发生了变化..."],
   "info.shape-shifter-curse.use_catalyst": ["你体内的魔法被催化剂进一步激化了..."],
-  "info.shape-shifter-curse.max_form_used_catalyst": ["你当前的形态被改变的如此彻底，即使催化剂也难以产生进一步的效果..\n（别失望，我也许之后就会在mod里面加入你在想的那个事情！）"],
+  "info.shape-shifter-curse.max_form_used_catalyst": ["你当前的形态被改变的如此彻底，普通的催化剂难以产生进一步的效果.."],
+  "info.shape-shifter-curse.max_form_used_powerful_catalyst": ["在强效催化剂的影响下，你的形态发生了永久性的变化..."],
+  "info.shape-shifter-curse.form_used_powerful_catalyst_failed": ["强效催化剂对你目前的形态没有作用"],
   "info.shape-shifter-curse.sp_form_used_catalyst": ["你目前的形态中似乎流淌着某种特殊的魔力，催化剂无法对它产生进一步的影响..."],
   "entity.shape-shifter-curse.t_bat": ["咒文蝙蝠"],
   "item.shape-shifter-curse.custom_bat_spawn_egg": ["咒文蝙蝠刷怪蛋"],
