--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -258,6 +258,7 @@
   "codex.desc.pros_2": ["你的形态拥有这些力量"],
   "codex.desc.cons_2": ["同时，你的形态也有一些不便的地方…"],
   "codex.desc.instincts_2": ["你的本能不再困扰你，它们已经完全成为了你的一部分"],
+  "codex.desc.instincts_3": ["审视你的内心，你感觉到曾经在你体内变幻的魔力已然进入了新的稳定状态，即使是诅咒之月也无法撼动其分毫\n你的形态已经被永久性的改变了"],
 
   "codex.form.original.title": ["\n整体而言，你是一个正常的人类"],
   "codex.form.original.appearance": [" "],
@@ -350,6 +351,11 @@
   "codex.form.bat2.pros": ["你现在可以在黑暗中清晰地分辨事物。当处于暗处时，你也感觉自己的行动更加敏捷\n你的前爪坚硬而有力，让你在空手时也能造成不俗的伤害。而且还让你可以徒手高速挖掘方块，并正常收获矿石等掉落物\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高，且无论从多高的地方都可以缓慢降落。它们也可以当做鞘翅使用\n你的身体能更有效地吸收非肉类的食物，他们给与的饱食度更高\n你的体型已经足够小，让你可以挤入一格的空间中"],
   "codex.form.bat2.cons": ["你的前爪不再适合抓握笨重的工具与武器。当你用其挖掘坚硬的物块或者挥动其击打怪物时，它们只会松脱掉落\n你的前爪连抓起弓弩都显得困难，更别提使用它们了\n你的膜翼与趾行的腿部结构让装备胸甲、腿甲与鞋变得不再可能。它们让你在地面的移动速度也稍微减慢\n在阳光下时，你感觉自己变得非常虚弱与迟缓\n你不再能食肉，你的身体已经彻底无法消化它们了"],
   "codex.form.bat2.instincts": [" "],
+  "codex.form.familiar_fox3.title": ["\n‘幻形者非常适合作为使魔。对魔法具有亲和性，又拥有足够的智慧…\n看来我们已经找到了正确的方法’"],
+  "codex.form.familiar_fox3.appearance": ["你整体看上去与普通的野生红狐别无二致——除了身后摆动的异于寻常的两条大尾巴以外\n你的眼睛现在毫无疑问属于某种野生动物。在阳光下，你的瞳孔会收缩成一条狭缝\n你意识到体内魔法的性质已经与之前完全不同。曾经充满变化的魔力已经被固定，并永远转变为了另外的东西——某种更加适合一只使魔的魔力…\n青蓝色的火焰不时从你周身凭空出现，又缓慢消失。它们标志着你的使魔身份\n\n看来这就是你之后的新生活了"],
+  "codex.form.familiar_fox3.pros": ["灾厄村民们把你视为盟友，它们不再会攻击你\n你的奔跑速度变得更快。由于你的体型，远程攻击也难以命中你\n得益于更加强大的使魔魔力，通过在相应的原料上右键使用水瓶，你可以直接在背包栏中酿造强力的剧毒、瞬间回复与瞬间伤害的喷溅式药水\n同时，通过对魔力的感知，你可以透视一定范围内的生物位置\n由于你厚实的皮毛，你可以在甜浆果丛中自如穿梭\n你的使魔魔力保护你不受到火焰与岩浆的伤害。同时，大部分持续状态效果都不再能够影响你的身体，无论是正面还是负面"],
+  "codex.form.familiar_fox3.cons": ["女巫与唤魔者的魔力与你的使魔魔力链接。它们不允许你伤害灾厄村民，并且会试图控制你的行为…\n作为一只使魔，普通的食物不再能够为你提供能量。你需要在空手时右键从其他中立生物身上吸取能量来恢复饱食度\n智慧生物的能量显然更加充沛。另外，女巫们似乎很乐意提供这些能量\n也许你应该去它们身边…\n\n你的生命值更少。由于不再有能够自如使用工具的双手，你挖掘方块的速度也变得更慢\n腿甲与鞋不再适合你的四足身体结构，你在水中的移动速度也变得更慢\n村民们害怕你，它们会主动避开你"],
+  "codex.form.familiar_fox3.instincts": [""],
   "codex.form.allay_sp.title": ["\n你现在的样子相当接近于某种友善的灵体生物，但不清楚是否由于你体内存在的魔法，你的身上出现了一些不太一样的特征"],
   "codex.form.allay_sp.appearance": ["你的身体现在由某种亮蓝色的半透明薄纱状物质构成。它们非常轻盈，让你能够漂浮在空中\n一对羽状的，类似触角的结构从你的前额长出，质地相当柔韧。它们似乎给了你某种全新的感官，让你可以感觉到周围生物所在的方位\n一双枝状的翅膀从你背后生长出来。借助它们。你可以在高空中漂浮移动。在翅膀的下方，两条飘带状的结构从你的背后延伸出来——你不太确定它们的作用，也许它们可以替代你失去的腿部的某些功能"],
   "codex.form.allay_sp.pros": ["更加接近于灵体的体质给与了你一些全新的能力——\n你的各种动作现在几乎不会消耗饱食度\n通过长按跳跃键，你可以飞上高空，以及在空中自由悬浮移动。在下落时你也会缓慢飘落\n\n由于漂浮在空中，你自然不会发出脚步声\n紫水晶与你的身体产生了奇特的共鸣：在物品栏中，你可以对着一个紫水晶块“使用”另一个紫水晶块来创造紫水晶碎片\n你可以感应到其他生物的能量并加以利用：你可以感知到一定范围内实体的方位。当对其他生物造成伤害时，你也可以从其身上吸取一定的生命值\n由于增强的感知能力，你可以使用弓箭带来更高的伤害\n你现在非常小，可以轻易进入一格高的空间，投射物也更难命中你"],
