解决ocelot_2的护甲判定问题 解决instinct在cursed moon期间被异常清空的问题

--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -321,7 +321,7 @@
   "codex.form.ocelot2.title": ["\n四足行动对于现在的你而言是最自然的姿态。当蹲坐在地面上时，你几乎和某种大型猫科动物没有什么区别"],
   "codex.form.ocelot2.appearance": ["你头顶的耳朵变得更大也更加灵活，你注意到它们会自动转向声音来源的方位\n你的全身现在都被带有黑色斑点的毛皮所覆盖。它们很保暖，你绝对不希望它们被打湿\n你的后足完全变成了趾行的结构，但是你依然可以勉强维持直立\n借助有力的四爪与几乎与躯干等长的尾部，你可以压低重心在原野上与森林中以极快的速度四足奔行与飞扑。你有信心没有任何猎物能从你的利爪下逃脱"],
   "codex.form.ocelot2.pros": ["得益于身体结构的改变，在潜行时，你会进入四足移动的狩猎姿态\n处于狩猎姿态时，你能够极为快速的奔跑，并且可以进入一格高的狭小区域\n处于狩猎姿态时，你的跳跃会变为前扑，让你能够跨越相当远的距离\n\n你的猫科动物眼睛让你即使在黑夜也能够清晰视物\n你能够在空手时使用前爪造成大量伤害\n借助你的爪子，你可以在树干与树叶上攀爬\n你不会发出脚步声，也不会受到摔落伤害\n新鲜的生肉给与你更高的饱食度\n你的身体给了你强大的免疫力，让你不会受到饥饿与中毒的异常状态\n苦力怕会对你敬而远之"],
-  "codex.form.ocelot2.cons": ["处于狩猎姿态时，大幅度增强的身体机能会让你的饱食度快速被消耗。当饱食度少于阈值时，你也不再能够维持狩猎姿态\n\n对于你现在趾行的后足而言，用双足疾跑变得不再可能\n作为变得更小，更轻巧的代价，你的最大生命值更大幅度地减少了\n作为疾速而致命的猎手，你只能装备皮甲或链甲。同时，你也不再能有效使用盾牌阻挡伤害\n由于提升的新陈代谢，你的自然饱食度消耗速度更快\n你的消化系统进一步改变，生肉是你现在食谱中唯一的食物"],
+  "codex.form.ocelot2.cons": ["处于狩猎姿态时，大幅度增强的身体机能会让你的饱食度快速被消耗。当饱食度少于阈值时，你也不再能够维持狩猎姿态\n\n对于你现在趾行的后足而言，用双足疾跑变得不再可能\n作为变得更小，更轻巧的代价，你的最大生命值更大幅度地减少了\n作为疾速而致命的猎手，除了头盔以外，你只能装备不影响行动的皮甲或链甲。同时，你也不再能有效使用盾牌阻挡伤害\n由于提升的新陈代谢，你的自然饱食度消耗速度更快\n你的消化系统进一步改变，生肉是你现在食谱中唯一的食物"],
   "codex.form.ocelot2.instincts": ["在你的内心深处传来了某种微弱的悸动：你身上的变化还没有到达终点\n一剂强力催化剂可以让你的变化抵达下一个阶段…但这一过程很可能是永久性的\n你不会真的在考虑这件事情吧？"],
 
   "codex.form.bat0.title": ["\n诅咒对你的身体产生了一些影响，让你看起来像某些翼手目的生物。你感到黑暗的环境在吸引着你。"],
